--- a/WebIBOST/Test.Master
+++ b/WebIBOST/Test.Master
@@ -56,18 +56,18 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; height: 100px">
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0;height: 85px;background: black">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <%--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </button>--%>
+               
                 <a class="navbar-brand" href="#">
-                    <img src="IMG/photo.jpg" width="100" height="100" />
+                    <img src="IMG/photo.jpg" width="75" height="75" />
                 </a>
-
 
             </div>
             <!-- /.navbar-header -->
@@ -289,8 +289,8 @@
 
 
         </nav>
-
-        <div class="panel panel-default">
+         
+        <%--<div class="panel panel-default">
             <div class="panel-heading">
                 <i class="fa fa-bar-chart-o fa-fw"></i>Donut Chart Example
                        
@@ -300,7 +300,7 @@
                 <a href="#" class="btn btn-default btn-block">View Details</a>
             </div>
             <!-- /.panel-body -->
-        </div>
+        </div> --%>
 
 
     </div>
@@ -308,8 +308,7 @@
     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
     </asp:ContentPlaceHolder>
 
-    <h1>HELLO IB ORDER TRACKING</h1>
-
+ 
 
 
 
