--- a/WebIBOST/Test.Master
+++ b/WebIBOST/Test.Master
@@ -49,6 +49,10 @@
     <!-- Custom Theme JavaScript -->
     <script src="/dist/js/sb-admin-2.js"></script>
 
+
+     <!-- Bootstrap core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
 
@@ -58,6 +62,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0;height: 85px;background: #6cfb2f">
             <div class="navbar-header">
+             
                 <%--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -69,10 +74,11 @@
                     <img src="IMG/photo.jpg" width="75" height="75" />
                     
                 </a>
-
+                   
             </div>
+            
             <!-- /.navbar-header -->
-
+            
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
