--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -14,20 +14,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-   <%-- <!-- MetisMenu CSS -->
+    <%--   <!-- MetisMenu CSS -->
     <link href="vendor/metisMenu/metisMenu.min.css" rel="stylesheet">--%>
 
-     <!-- DataTables CSS -->
+    <!-- DataTables CSS -->
     <link href="vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
     <!-- DataTables Responsive CSS -->
     <link href="vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
-   <%-- <!-- Custom Fonts -->
+    <%-- <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">--%>
 
     <title></title>
 
-    
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -35,35 +35,41 @@
     <form id="form1" runat="server">
         <div>
             <nav class="navbar navbar-light" style="background-color: #ffffff;">
-            <a class="navbar-brand" href="#">
-                <img src="IMG/photo.jpg" width="50" height="50"/></a>
-             
-                  <div class="second-Menu text-md-left " >     
-                      
+                <a class="navbar-brand" href="#">
+                    <img src="IMG/photo.jpg" width="50" height="50" /></a>
 
-                      <a class="nav-link" href="home.aspx">Home</a>
-                       <a class="nav-link" href="#">----</a>                
-                      </div>
-                   
-                 
-                
-             </nav>
-            </div> 
+                <div class="second-Menu text-md-left ">
+                    <ul>
+                        <li>
+                        <a class="nav-link" href="home.aspx">Home</a>
+                        </li>    
+                        <li>
+                             <a class="nav-link" href="Table.aspx">Table</a>
+                        </li>
+                       
+                    </ul>
+                </div>
 
 
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        
 
-             <!-- Footer -->
-                <footer class="page-footer font-small blue">
-                     <!-- Copyright -->
-                     <div class="footer-copyright text-center py-3">© 2018 Copyright:
+            </nav>
+        </div>
+
+
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        </asp:ContentPlaceHolder>
+
+
+        <!-- Footer -->
+        <footer class="page-footer font-small blue">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">
+                © 2018 Copyright:
                       <a href="https://www.malee.co.th/th">Malee Group CO.,LTD. ALL RIGHT RESERVED</a>
-                        </div>
-                      <!-- Copyright -->
-                </footer>
-                <!-- Footer -->
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
 
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -71,25 +77,34 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript">
         $('.carousel').carousel({
-             interval: 2000
+            interval: 2000
         })</script>
 
-      <%--<!-- Metis Menu Plugin JavaScript -->
-    <script src="vendor/metisMenu/metisMenu.min.js"></script>--%>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="vendor/metisMenu/metisMenu.min.js"></script>
 
-     <!-- DataTables JavaScript -->
+    <!-- DataTables JavaScript -->
     <script src="vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
     <script src="vendor/datatables-responsive/dataTables.responsive.js"></script>
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
-    $(document).ready(function() {
-        $('#dataTables-example').DataTable({
-            responsive: true
+        $(document).ready(function () {
+            $('#dataTables-example').DataTable({
+                responsive: true
+            });
         });
-    });
     </script>
 
+    <script>
+        
+        $('exampleModal').modal('show')
+    </script>
+
+    <%--   <!-- Morris Charts JavaScript -->
+    <script src="vendor/raphael/raphael.min.js"></script>
+    <script src="vendor/morrisjs/morris.min.js"></script>
+    <script src="data/morris-data.js"></script>--%>
 </body>
 </html>
