--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -49,7 +49,7 @@
                 </div>
                  <span class="second-Menu text-md-left " style="float:left">
                     
-                        <a class="nav-link" href="Table.aspx">Table</a>
+                        <a class="nav-link" href="Table.aspx">TableTest</a>
 
                 </span>
                  </ul>
