--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -121,8 +121,13 @@
                 responsive: true
             });
         });
+         $(document).ready(function () {
+            $('#ContentPlaceHolder1_tblData').DataTable({
+                responsive: true
+            });
+        });
     </script>
-
+   
     <script>
 
         $('exampleModal').modal('show')
