--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -55,8 +55,8 @@
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="SummaryDashboard.aspx">Dashboard</a></li>
-                                <li><a href="home.aspx">Home</a></li>
+                                <li class="active"><a href="home.aspx">Home</a></li>
+                                <li><a href="SummaryDashboard.aspx">Dashboard</a></li>                               
                                 <li><a href="table.aspx">Table</a></li>
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
