--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -45,13 +45,13 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                          <%--<a class="navbar-brand" href="home.aspx" >
-                                <img src="IMG/photo.jpg" width="50" height="50" /></a>--%>
+                          <a class="navbar-brand" href="home.aspx" >
+                                <img src="IMG/photo.jpg" width="30" height="30" /></a>
 
-                            <a class="navbar-brand" rel="home" href="#">
+                         <%--   <a class="navbar-brand" rel="home" href="#">
                                 <img style="max-width: 100px; margin-top: -7px;"
                                     src="IMG/photo.jpg">
-                            </a>
+                            </a>--%>
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
@@ -90,9 +90,9 @@
 
 
         <!-- Footer -->
-        <footer class="page-footer font-small blue">
+        <footer class="page-footer font-small blue" >
             <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">
+            <div class="footer-copyright text-center py-3"  >
                 © 2018 Copyright:
                       <a href="https://www.malee.co.th/th">Malee Group CO.,LTD. ALL RIGHT RESERVED</a>
             </div>
