--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -34,10 +34,10 @@
             <div class="container-fluid">
                 <nav class="navbar navbar-default navbar-fixed-top">
                     <%--<nav class="navbar navbar-inverse navbar-static-top">--%>
-                    
+
                     <div class="container-fluid">
                         <div class="navbar-header ">
-                              
+
 
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                                 <span class="sr-only">Toggle navigation</span>
@@ -45,10 +45,10 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                          <a class="navbar-brand" href="home.aspx" >
+                            <a class="navbar-brand" href="home.aspx">
                                 <img src="IMG/photo.jpg" width="30" height="30" /></a>
 
-                         <%--   <a class="navbar-brand" rel="home" href="#">
+                            <%--   <a class="navbar-brand" rel="home" href="#">
                                 <img style="max-width: 100px; margin-top: -7px;"
                                     src="IMG/photo.jpg">
                             </a>--%>
@@ -56,9 +56,9 @@
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="home.aspx">Home</a></li>
-                                <li><a href="SummaryDashboard.aspx">Dashboard</a></li>                               
+                                <li><a href="SummaryDashboard.aspx">Dashboard</a></li>
                                 <li><a href="SoForm.aspx">INPUT</a></li>
-                                
+
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
@@ -72,10 +72,11 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <p class="navbar-text navbar-right">Signed in as 
+                            <p class="navbar-text navbar-right">
+                                Signed in as 
                                 <a href="#" class="navbar-link">
-                                 <asp:Label runat="server" ID="lblLogin"></asp:Label>
-                                   
+                                    <asp:Label runat="server" ID="lblLogin"></asp:Label>
+
                                 </a>
                             </p>
                         </div>
@@ -91,9 +92,9 @@
 
 
         <!-- Footer -->
-        <footer class="page-footer font-small blue" >
+        <footer class="page-footer font-small blue">
             <!-- Copyright -->
-            <div class="footer-copyright text-center py-3"  >
+            <div class="footer-copyright text-center py-3">
                 © 2018 Copyright:
                       <a href="https://www.malee.co.th/th">Malee Group CO.,LTD. ALL RIGHT RESERVED</a>
             </div>
@@ -126,20 +127,21 @@
             $('#dataTables-example').DataTable({
                 responsive: true
             });
-        });
-         $(document).ready(function () {
+            $('#ContentPlaceHolder1_tblData_UserGroup').DataTable({
+                responsive: true
+            });
             $('#ContentPlaceHolder1_tblData').DataTable({
                 responsive: true
             });
-        });
-
-        $(document).ready(function () {
             $('#ContentPlaceHolder1_tblData_User').DataTable({
                 responsive: true
             });
         });
+
+
+
     </script>
-   
+
     <script>
 
         $('exampleModal').modal('show')
