--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -57,7 +57,7 @@
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="home.aspx">Home</a></li>
                                 <li><a href="SummaryDashboard.aspx">Dashboard</a></li>
-                                <li><a href="SoForm.aspx">INPUT</a></li>
+                                <li><a href="ManageUserAuthorize.aspx">Manage</a></li>
 
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
