--- a/WebIBOST1/Layout.Master
+++ b/WebIBOST1/Layout.Master
@@ -50,13 +50,13 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="home.aspx">
-                                <img src="IMG/photo.jpg" width="40" height="40" /></a>
+                    <%--        <a class="navbar-brand" href="home.aspx">
+                                <img src="IMG/photo.jpg" width="40" height="40" /></a>--%>
 
-                            <%--   <a class="navbar-brand" rel="home" href="#">
+                               <a class="navbar-brand" rel="home" href="home.aspx">
                                 <img style="max-width: 100px; margin-top: -7px;"
-                                    src="IMG/photo.jpg">
-                            </a>--%>
+                                    src="IMG/logo.png">
+                            </a>
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
@@ -96,34 +96,25 @@
         </asp:ContentPlaceHolder>
 
 
-        <!-- Footer -->
-        <footer class="page-footer font-small blue">
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">
-                © 2018 Copyright:
-                      <a href="https://www.malee.co.th/th">Malee Group CO.,LTD. ALL RIGHT RESERVED</a>
-            </div>
-            <!-- Copyright -->
-        </footer>
-        <!-- Footer -->
+       
 
     </form>
-
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    
-    <script type="text/javascript">
-        $('.carousel').carousel({
-            interval: 2000
-        })</script>
-
 
     <!-- DataTables JavaScript -->
     <script src="vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
     <script src="vendor/datatables-responsive/dataTables.responsive.js"></script>
+
+    <!-- carousel sec-->
+    <script type="text/javascript">
+        $('.carousel').carousel({
+            interval: 2000
+        })</script>
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
@@ -141,16 +132,27 @@
                 responsive: true
             });
         });
-
-
-
     </script>
-
+   
+    
+    <!--modal botton-->
     <script>
-
         $('exampleModal').modal('show')
     </script>
 
    
 </body>
+
+
+    <br />
+     <!-- Footer -->
+        <footer class="page-footer font-small blue">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center">
+                © 2018 Copyright:
+                      <a href="https://www.malee.co.th/th">Malee Group CO.,LTD. ALL RIGHT RESERVED</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
 </html>
